PainterExtension/CanvasColors/custom.css
:root{
    --bg-0: #7c7c7c;
    --bg-1: transparent;
    --bg-2: transparent;
    --text-0: #f5f5f5;
    --text-1: #f5f5f5;
    --text-2: #f5f5f5;
    --borders: #f5f5f5;
    --sidebar: #f5f5f5;
    --sidebar-icons: #f5f5f5;
    --links: #f5f5f5;
}


/* *{


}

html{


}

body{
    

} */

.darkmode body {

    color: var(--text-0);
    background-color: var(--bg-0) !important;
}


/* Links */
.darkmode a {
    color: var(--links);
}


/* Tables */
.darkmode table {
    background-color: var(--bg);
}

.darkmode tr {
    background-color: var(--bg);
}

.darkmode h1 {
    background-color: var(--bg);
}

.darkmode div {
    background-color: green;
}


/* Mobile/shrinked */ 
/* .darkmode #mobile-header {

}

.darkmode #wrapper {
 
} */

/* Top of Page */
/* .darkmode #breadcrumbs {
    background-color: transparent !important;
}

.darkmode #main {

} */

/* Left Side Links */
/* .darkmode #left-side {

}

.darkmode #section-tabs {
    background-color: transparent !important;
} */

/* Right Side */
/* .darkmode #content {
    background-color: transparent !important;
}

.darkmode #right-side-wrapper { 
    background-color: transparent !important;
} */

